chore: Maintenance - Update workflows to be more generic - Integrate Sonar into workflows - Add Sonar plugin - Fix editorconfig - Add Qlty configuration - Apply recommended code quality improvements identified by Sonar - Refactor EntityId handling - Breaking change in ApacheHttpClient (simplify Function to UnaryOperator) - Remove unnecessary eq matchers from Mockito tests - Migrate to use toList() - Regenerate dependency verification metadata - Remove codecov configuration - Fix some dependency cycles
{major}

Signed-off-by: Esta Nagy <nagyesta@gmail.com>